tests/misc_errors/mod.out
error: mod.li 6,6: variable `n` is not defined
    6 | echo(n)
      |      ^
error: mod.li 7,1: function `f` is not defined
    7 | f()
      | ^^^
error: mod.li 8,1: module `undefined_mod` is not defined
    8 | undefined_mod::f()
      | ^^^^^^^^^^^^^
error: mod.li 9,6: module `undefined_mod` is not defined
    9 | echo(undefined_mod::n)
      |      ^^^^^^^^^^^^^
